--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,340 @@
 * {
-    display: inline;
-    display: inline-block;
-    display: block;
+  box-sizing: border-box;
+  margin: 0;
 }
-div {
-    display: none;
+h1 {
+  font-family: 'Baloo Bhai';
+  font-weight: 400;
 }
-div:hover {
+p {
+  font-family: 'Roboto';
+  font-weight: 400;
+}
+.position {
+  position: sticky;
+}
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.bc-color {
+  background-color: black;
+}
+.sizes {
+  border-radius: 24px;
+  padding: 40px;
+  gap: 2rem;
+}
+.btn-img {
+  background-color: black;
+  border: transparent;
+  transition: all 0.4s ease-in-out;
+}
+.btn-img:hover {
+  background-color: rgb(82, 81, 81);
+  border-radius: 10px;
+}
+.img-all {
+  padding: 3px 3px 1px 3px;
+}
 
+.container {
+  height: 100vh;
+  display: flex;
+  min-height: 300px;
+}
+
+.container-padding {
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.mb-2rem {
+    margin-bottom: 2rem;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+.gap-2rem {
+    gap: 2rem;
+}
+.mt-auto {
+    margin-top: auto;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+.overflow {
+    overflow: auto;
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(138, 132, 132); 
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(58, 56, 56); 
+  }
+ ::-webkit-scrollbar {
+    width: 15px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+  .flex-all {
+    display: flex;
+    gap: 35px;
+  }
+  .rectangle {
+    display: flex;
+    align-items: center;
+    background: #F5F5F7;
+    border-radius: 14px ;
+  }
+  .gap-130px {
+    gap: 130px;
+  }
+  .mg-top-21 {
+    margin-top: 21px;
+    margin-bottom: 24px;
+  }
+  .padding-text {
+    padding-left: 2rem;
+  }
+  .padding-josh {
+    padding-right: 100px;
+  }
+  .mg-top-josh {
+    margin-top: -30px;
+  }
+  .text-josh {
+    font-size: 36px;
+  }
+  .text-p-josh {
+    font-size: 16px; 
+  }
+  .mycourse {
+    background: #F5F5F7;
+    border-radius: 14px;
+  }
+  .img-spain {
+    padding: 16px;
+    background-color: white;
+    border-radius: 12px;
+  }
+  .align-center {
+    display: flex;
+    align-items: center;
+  }
+  .padding-spain {
+    padding: 8px 24px 8px 8.5px;
+  }.text-spain {
+    font-size: 16px;
+  }
+  .padding-right-44px {
+    padding-right: 44px;
+  }
+  .text-minus {
+    margin-top: -33px;
+    margin-left: 5px;
+  }
+  .padding-right-40 {
+    padding-right: 40px;
+  }
+  .continue {
+    background-color: black;
+    color: white;
+    border: transparent;
+    border-radius: 8px;
+    padding: 12px 32px 12px 32px;
+  }
+  .padding-right-23 {
+    padding-right: 23px;
+  } 
+  .arrows {
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    border: transparent;
+  }
+  .arrows:hover {
+    background-color: rgb(100, 98, 98);
+  }
+  .courses-section {
+    padding-top: 20px;
+}
+.text-h2-2 {
+    font-family: 'Baloo Bhai';
+    font-size: 24px;
+    font-weight: 400; 
+    margin-bottom: 16px;
+}
+.flex-course {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 10px;
+}
+.text-h3-1 {
+    font-family: 'Baloo Bhai';
+    font-size: 16px;
+    font-weight: 400;    
+}
+.text-h3-2 {
+    font-family: 'Baloo Bhai';
+    font-size: 16px;
+    font-weight: 400;    
+    color: rgb(150, 149, 149);
+}
+.all-courses {
+    width: 620px;
+    border-radius: 14px;
+    background-color: #F5F5F7;
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+    transition: all .2s ease-in-out;
+}
+.all-courses:hover {
+    background-color: fuchsia;
+}
+.img-1 {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-right: 21px;
+    padding-left: 21px;
+    background-color: white;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: 8.5px;
+    border-radius: 12px;
+    margin-right: 24px;
+}
+.text-h3-courses {
+    font-family: 'Baloo Bhai';
+    font-size: 16px;
+    font-weight: 400;    
+}
+.text-p-courses {
+    font-family: 'Roboto';
+    font-size: 13px;
+    font-weight: 400;    
+}
+.marg-57px {
+    margin-right: 57px;
+}
+.margin-8px {
+    margin-right: 8px;
+}
+.text-p-time {
+    font-family: 'Roboto;';
+    font-size: 13px;
+    font-weight: 400;    
+}
+.margin-40px {
+    margin-right: 40px;
+}
+.margin-10px {
+    margin-right: 10px;
+}
+.margin-31px {
+    margin-right: 31px;
+}
+.text-p-number {
+    font-family: 'Roboto';
+    font-size: 13px;
+    font-weight: 400;    
+}
+.button-course {
+    border-radius: 8px;
+    border: 2px solid #0C0B0B;
+    background-color: white;
+    width: 120px;
+    height: 40px;
+    transition: all .5s ease-in-out;
+}
+.button-text {
+    font-family: 'Roboto';
+    font-size: 13px;   
+}
+.button-course:hover {
+    background-color: black;
+    color: white;
+    font-size: medium;
+}
+.btn-transition:hover {
+    width: 130px;
+    height: 50px;
+}
+.img-2 {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-right: 16px;
+    padding-left: 16px;
+    background-color: white;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: 8.5px;
+    border-radius: 12px;
+    margin-right: 24px;
+}
+.marg-38px {
+    margin-right: 38px;
+}
+.marg-58px {
+    margin-right: 58px;
+}
+.margin-33px {
+    margin-right: 33px;
+}
+.marg-36px {
+    margin-right: 36px;
+}  
+.flex-navigation {
+  display: flex;
+  align-items: center;
+}
+.flex-nav {
+  display: flex;
+  align-items: center;
+}
+input {
+  padding: 10px 0px 8px 15px;
+  background: #F5F5F7;
+  border: transparent;
+  border-radius: 0px 8px 8px 0px;
+  margin-right: 35px;
+}
+.btn-search {
+  border: transparent;
+  background: #F5F5F7;
+  border-radius: 8px 0px 0px 8px;
+}
+.search-img {
+  padding: 3px 0px 3px 5px;
+}
+.mg-right {
+  margin-right: 15px;
+}
+.btn-notification {
+  border: transparent;
+  background-color: white;
+}
+.btn-notification:hover {
+  background-color: #F5F5F7;
+  border-radius: 8px;
+}
+.btn-profile {
+  background-color: white;
+  border: transparent;
+}
+.btn-profile:hover {
+  background-color: #F5F5F7;
+  border-radius: 8px;  
+}
